<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:foreground="?attr/selectableItemBackground">

    <TextView
        android:id="@+id/login_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text"
        android:paddingTop="@dimen/padding"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding"
        android:text="@string/user"/>

    <TextView
        android:id="@+id/login_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/large_text"
        android:paddingTop="@dimen/padding"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding"
        android:text="@string/login_user"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text"
        android:paddingTop="@dimen/padding"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding"
        android:text="@string/repositories"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_repository"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingTop="@dimen/padding"
        android:paddingStart="@dimen/padding_small"
        android:paddingEnd="@dimen/padding_small"
        android:paddingBottom="@dimen/padding" />

</LinearLayout>